feat: VF-1 | add eslint rule to pipeline

--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -27,5 +27,8 @@ jobs:
     - name: Install dependencies
       run: yarn install --frozen-lockfile
       
+    - name: Linter check
+      run: yarn eslint ./src
+      
     - name: Build
       run: yarn build
