--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.11.7",
+    "@mui/utils": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.2",
     "i18next": "^22.4.10",
     "react": "^18.2.0",
