--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "target": "ESNext"
   },
   "exclude": ["node_modules"],
-  "include": ["src", "typemodules/typings.d.ts"],
+  "include": ["src", "typemodules/typings.d.ts", "mui.d.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
