--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.11.7",
+    "@mui/utils": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.2",
-    "i18next": "^22.4.9",
+    "i18next": "^22.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "yup": "^0.32.11"
