--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,7 @@
     "inlineSources": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -23,13 +19,8 @@
     "strict": true,
     "target": "ESNext"
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src",
-    "typemodules/typings.d.ts"
-  ],
+  "exclude": ["node_modules"],
+  "include": ["src", "typemodules/typings.d.ts", "mui.d.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
