--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.11.7",
     "@mui/utils": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.4",
+    "axios-case-converter": "^1.0.1",
     "i18next": "^22.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
