--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.43.0",
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
+    "react-router": "^6.8.1",
     "react-router-dom": "^6.8.0",
     "yup": "^0.32.11"
   },
