--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.10",
-    "@mui/material": "^5.11.7",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.12",
     "@mui/utils": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.4",
