--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-hook-form": "^7.43.0",
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
+    "react-router": "^6.8.1",
     "react-router-dom": "^6.8.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.0",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
