--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /build
 COPY package.json .
 COPY yarn.lock .
 
-RUN yarn install
+RUN apk update &&\
+    apk upgrade &&\
+    yarn install
 
 COPY . .
 
@@ -16,11 +18,14 @@ RUN yarn build
 FROM nginx:alpine as prod
 WORKDIR /app
 
+RUN rm -rf /user/share/nginx/html/*
+
+RUN apk update &&\
+    apk upgrade
+
 COPY ./deploy/nginx.conf /etc/nginx/nginx.conf
 
 RUN sed -i 's/<server_name>/$BASE_HOST/g' /etc/nginx/nginx.conf
-
-RUN rm -rf /user/share/nginx/html/*
 
 COPY --from=build /build/build /usr/share/nginx/html
 
