--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -2,25 +2,31 @@ FROM node:18-alpine as build
 WORKDIR /build
 
 COPY package.json .
-COPY yarn.lock .
+COPY pnpm-lock.yaml .
 
-RUN yarn install
+RUN apk update &&\
+    apk upgrade &&\
+    npm install -g pnpm &&\
+    pnpm i
 
 COPY . .
 
 ARG API_BASE_URL
 ENV VITE_APP_API_BASE_URL $API_BASE_URL
 
-RUN yarn build
+RUN pnpm build
 
 FROM nginx:alpine as prod
 WORKDIR /app
 
+RUN rm -rf /user/share/nginx/html/*
+
+RUN apk update &&\
+    apk upgrade
+
 COPY ./deploy/nginx.conf /etc/nginx/nginx.conf
 
 RUN sed -i 's/<server_name>/$BASE_HOST/g' /etc/nginx/nginx.conf
-
-RUN rm -rf /user/share/nginx/html/*
 
 COPY --from=build /build/build /usr/share/nginx/html
 
