--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "axios-case-converter": "^1.0.1",
     "i18next": "^22.4.10",
+    "mui-modal-provider": "^2.2.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
