fix: DF-68 | check branch name on tag

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -83,6 +83,8 @@ jobs:
           echo "CHECKOUT_BRANCH=$checkout_branch" >> $GITHUB_ENV
           echo "PROFILE_PATH=${{ env.PROJECT_BASE_PATH }}-$profile" >> $GITHUB_ENV
 
+          echo $checkout_branch
+
       - name: Copy compose
         uses: appleboy/scp-action@master
         with:
