--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -67,7 +67,8 @@ jobs:
       - name: Setup environment
         shell: bash
         run: |
-          branch=$(echo ${GITHUB_REF#refs/heads/})
+          branch=$GITHUB_REF_NAME
+
           profile=''
           checkout_branch=''
 
@@ -83,7 +84,7 @@ jobs:
           echo "CHECKOUT_BRANCH=$checkout_branch" >> $GITHUB_ENV
           echo "PROFILE_PATH=${{ env.PROJECT_BASE_PATH }}-$profile" >> $GITHUB_ENV
 
-          echo $checkout_branch
+          echo $branch
 
       - name: Copy compose
         uses: appleboy/scp-action@master
