--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -8,13 +8,14 @@ on:
   push:
     branches:
       - develop
-      - "setup-deploy"
   release:
     types: ["published"]
   workflow_dispatch:
 
 jobs:
   build:
+    if: !github.event.release.prerelease
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -39,6 +40,10 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{major}}.{{minor}}.{{patch}},value=${{ github.ref_name }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ github.ref_name }}
+            type=semver,pattern={{major}},value=${{ github.ref_name }}
 
       - name: Build and push image
         uses: docker/build-push-action@v4
@@ -53,40 +58,33 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ always() }}
+    if: ${{ !github.event.release.prerelease && always() }}
     needs: build
 
     env:
       PROJECT_BASE_PATH: ${{ vars.PROJECT_ROOT }}/${{ github.event.repository.name }}
       BASE_HOST: ${{ vars.BASE_HOST }}
       DEPLOY_FIELS: docker-compose.yml,Makefile
+      DEPLOY_TAG_NAME_REGEX: ([0-9].[0-9].[0-9])
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup environment
+      - name: Setup profile
         shell: bash
         run: |
-          branch=$GITHUB_REF_NAME
-
           profile=''
-          checkout_branch=''
 
-          if [[ $branch == 'develop' || $branch == 'setup-deploy' ]]; then
-              profile='test'
-              checkout_branch='develop'
-          else
-              profile='prod'
-              checkout_branch='main'
+          if [[ $GITHUB_REF_TYPE == 'tag' && $GITHUB_REF_NAME =~ $DEPLOY_TAG_NAME_REGEX]]
+            profile='prod'
+          elif [[ $GITHUB_REF_TYPE == 'branch' ]]; then
+            profile='test'
           fi
 
           echo "PROFILE=$profile" >> $GITHUB_ENV
-          echo "CHECKOUT_BRANCH=$checkout_branch" >> $GITHUB_ENV
           echo "PROFILE_PATH=${{ env.PROJECT_BASE_PATH }}-$profile" >> $GITHUB_ENV
 
-          echo $branch
-
-      - name: Copy compose
+      - name: Copy deploy configs
         uses: appleboy/scp-action@master
         with:
           key: ${{ secrets.SERVER_KEY }}
@@ -104,8 +102,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           host: ${{ secrets.SERVER_HOST }}
           port: ${{ secrets.SSH_PORT }}
-          envs: PROFILE_PATH,PROFILE,CHECKOUT_BRANCH,BASE_HOST
+          envs: PROFILE_PATH,PROFILE,BASE_HOST
           script: |
             cd $PROFILE_PATH
-
             make deploy profile=$PROFILE
