--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -14,9 +14,8 @@ on:
 
 jobs:
   build:
-    if: !github.event.release.prerelease
-
     runs-on: ubuntu-latest
+    if: ${{ !github.event.release.prerelease }}
 
     permissions:
       contents: read
