--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -63,7 +63,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ !github.event.release.prerelease && (github.ref_type == 'tag' || github.ref_name == 'develop') }}
+    if: ${{ !github.event.release.prerelease && (github.ref_type == 'tag' || github.ref_name == 'develop') && always() }}
     needs: build
 
     env:
