--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -67,9 +67,9 @@ jobs:
           push: true
           context: .
           target: prod
-          build-args: |
-            "VITE_APP_API_BASE_URL=${{ env.VITE_APP_API_BASE_URL }}"
           file: "./deploy/Dockerfile"
+          build-args: |
+            "VITE_APP_API_BASE_URL=test"
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
