fix: DF-68 | fix deploy (#71)
* fix: DF-68 | copy only necessary files

* fix: DF-68 | check branch name on tag

* fix: DF-68 | check branch name on tag

* fix: DF-68 | fix tags

* fix: DF-68 | fix stage condition

* fix: DF-68 | add default tags

* fix: DF-68 | add condition to semver tags

* fix: DF-68 | fix setup profile script

* fix: DF-68 | add platform to buildx

* fix: DF-68 | remove build flag from docker up; add docker pull

* fix: DF-68 | prevent deploy from not develop branches

* fix: DF-68 | retrieve always() to test

* fix: DF-68 | remove always()

* fix: DF-68 | add build env configuration for profiles

* fix: DF-68 | move up configuration

* fix: DF-68 | add build args

* fix: DF-68 | add test build args

* fix: DF-68 | fix build args

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -24,6 +24,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Configuration for prod
+        if: ${{ github.ref_type == 'tag' }}
+        run: |
+          echo "VITE_APP_API_BASE_URL=${{ secrets.API_BASE_URL_PROD }}" >> $GITHUB_ENV
+
+      - name: Configuration for test
+        if: ${{ github.ref_type == 'branch' }}
+        run: |
+          echo "VITE_APP_API_BASE_URL=${{ secrets.API_BASE_URL_TEST }}" >> $GITHUB_ENV
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
@@ -68,6 +78,8 @@ jobs:
           context: .
           target: prod
           file: "./deploy/Dockerfile"
+          build-args: |
+            "API_BASE_URL=${{ env.VITE_APP_API_BASE_URL }}"
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
