--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -7,7 +7,7 @@ http {
         listen 80;
         listen [::]:80;
 
-        server_name localhost <server_name>;
+        server_name <server_name>;
 
         root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
