--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -11,22 +11,24 @@ RUN apk update &&\
 
 COPY . .
 
-ARG API_BASE_URL
-ENV VITE_APP_API_BASE_URL $API_BASE_URL
+ARG VITE_APP_API_BASE_URL
+ENV VITE_APP_API_BASE_URL $VITE_APP_API_BASE_URL
 
 RUN pnpm build
 
 FROM nginx:alpine as prod
 WORKDIR /app
 
-RUN rm -rf /user/share/nginx/html/*
 
 RUN apk update &&\
     apk upgrade
 
 COPY ./deploy/nginx.conf /etc/nginx/nginx.conf
 
-RUN sed -i 's/<server_name>/$BASE_HOST/g' /etc/nginx/nginx.conf
+ARG BASE_HOST
+
+RUN sed -i "s/<server_name>/${BASE_HOST}/g" /etc/nginx/nginx.conf &&\
+    rm -rf /user/share/nginx/html/*
 
 COPY --from=build /build/build /usr/share/nginx/html
 
