--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.9.0",
+    "react-stay-scrolled": "^8.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
