--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -27,8 +27,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          platforms: linux/arm64
 
       - name: Log in to the registry
         uses: docker/login-action@v2
@@ -64,7 +62,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v4
         with:
-          platforms: linux/arm64
+          platforms: linux/amd64
           push: true
           context: .
           target: prod
@@ -123,4 +121,9 @@ jobs:
           envs: PROFILE_PATH,PROFILE,BASE_HOST
           script: |
             cd $PROFILE_PATH
+
+            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
             make deploy profile=$PROFILE
+
+            docker logout
