--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.9.0",
+    "react-stay-scrolled": "^8.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
