--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.10",
@@ -18,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.4",
     "axios-case-converter": "^1.0.1",
+    "emoji-mart": "^5.5.2",
     "i18next": "^22.4.10",
     "mui-modal-provider": "^2.2.0",
     "notistack": "^3.0.1",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.0",
+    "@types/emoji-mart": "^3.0.9",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
